[tool.poetry]
name = "plot_spectrum"
version = "0.1.0"
description = ""
authors = ["aki <aki@mymail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.6.1"
matplotlib = "^3.8.3"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
