[package]
name = "symtop_spectrum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "ex_symtop_spectrum"
path = "examples/ex_symtop_spectrum.rs"

[[example]]
name = "ex_symtop_spectrum_2"
path = "examples/ex_symtop_spectrum_2.rs"

[[example]]
name = "ex_j_fixed"
path = "examples/ex_j_fixed.rs"

[dependencies]
transition = {path = "../transition"}
eigen_state = {path = "../eigen_state"}
wigner_j = {path = "../wigner_j"}
